--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-sphinx = "*"
-sphinx-autobuild = "*"
-recommonmark = "*"
+mkdocs = "*"
 
 [dev-packages]
 
