--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ pages:
     - Onboarding: onboarding.md
     - Fee Faucet: fee-faucet.md
     - KIN Faucet: kin-faucet.md
+    - Network Info: network-info.md
     - Official Links: links.md
   - API Reference:
     - Overview: api-reference-overview.md
